--- a/app/src/main/res/layout/fragment_customer_edit.xml
+++ b/app/src/main/res/layout/fragment_customer_edit.xml
@@ -16,7 +16,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/name"
+            android:text="@string/customer_name"
+            android:labelFor="@id/etxt_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +29,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/phone"
+            android:text="@string/customer_phone"
+            android:labelFor="@id/etxt_phone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_name" />
@@ -40,7 +42,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/email"
+            android:text="@string/customer_email"
+            android:labelFor="@id/etxt_email"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
@@ -52,7 +55,8 @@
             android:layout_marginLeft="32dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="44dp"
-            android:text="@string/other_text"
+            android:text="@string/customer_other_info"
+            android:labelFor="@id/etxt_other_notes"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_email" />
@@ -138,7 +142,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/save_edit"
+            android:text="@string/button_save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.723"
