--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -3,11 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.evans.ui.EditAppointmentFragment">
+    tools:context="com.example.evans.ui.AppointmentEditFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
+        <Button
+            android:id="@+id/btn_appointment_cancel"
+            android:text="@string/cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:drawableStart="@drawable/ic_close_white_24dp"
+            android:drawablePadding="2dip"
+            android:background="#00000000"
+            android:paddingEnd="30dip"
+            android:paddingStart="26dip"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:singleLine="true"
+            android:gravity="center" />
+
+
+        <Button
+            android:id="@+id/btn_appointment_save"
+            android:text="@string/save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:textColor="#ffffff"
+            android:drawableStart="@drawable/ic_done_white"
+            android:drawablePadding="2dip"
+            android:background="#00000000"
+            android:paddingEnd="30dip"
+            android:paddingStart="26dip"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="4dp"
+            android:singleLine="true"
+            android:gravity="center" />
+
+
 
 
         <!-- Customer name -->
@@ -18,22 +70,21 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/name"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/btn_appointment_cancel"/>
 
 
         <EditText
             android:id="@+id/etxt_customer_name"
-            android:layout_width="233dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="18dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_customer_name"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/btn_appointment_cancel" />
 
 
         <!-- Customer email -->
@@ -44,20 +95,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/email"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_customer_name" />
 
 
         <EditText
             android:id="@+id/etxt_customer_email"
-            android:layout_width="233dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="textEmailAddress"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_customer_email"
             app:layout_constraintTop_toBottomOf="@id/etxt_customer_name" />
 
@@ -70,20 +121,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/phone"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_customer_email" />
 
 
         <EditText
             android:id="@+id/etxt_customer_phone"
-            android:layout_width="233dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="phone"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_customer_phone"
             app:layout_constraintTop_toBottomOf="@id/etxt_customer_email" />
 
@@ -96,20 +147,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/date"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone" />
 
 
         <EditText
             android:id="@+id/etxt_appointment_date"
-            android:layout_width="225dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="datetime"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.556"
             app:layout_constraintStart_toEndOf="@+id/txt_appointment_date"
             app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone" />
@@ -123,13 +174,14 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/service"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_appointment_date" />
 
 
         <Spinner
             android:id="@+id/spinner_service_type"
-            android:layout_width="150dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
@@ -144,20 +196,21 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/Price"
-            app:layout_constraintStart_toEndOf="@id/spinner_service_type"
-            app:layout_constraintTop_toBottomOf="@id/txt_appointment_date" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/spinner_service_type" />
 
 
         <EditText
             android:id="@+id/etxt_price"
-            android:layout_width="80dp"
+            android:layout_width="72dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="24dp"
             android:ems="10"
             android:inputType="datetime"
             app:layout_constraintStart_toEndOf="@+id/txt_price"
-            app:layout_constraintTop_toBottomOf="@id/etxt_appointment_date" />
+            app:layout_constraintTop_toBottomOf="@id/spinner_service_type" />
 
 
         <!-- Notes -->
@@ -168,8 +221,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/notes"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_service_type" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_price" />
 
         <EditText
             android:id="@+id/etxt_appointment_note"
@@ -180,34 +234,8 @@
             android:ems="10"
             android:inputType="textMultiLine"
             app:layout_constraintStart_toEndOf="@+id/txt_appointment_note"
-            app:layout_constraintTop_toBottomOf="@id/etxt_price" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_price" />
 
-
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/red_button"
-            android:text="@string/cancel"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chk_showed_up" />
-
-        <Button
-            android:id="@+id/btn_save"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/blue_button"
-            android:text="@string/save"
-            android:textColor="#fff"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
-            app:layout_constraintTop_toBottomOf="@+id/chk_showed_up" />
 
         <CheckBox
             android:id="@+id/chk_showed_up"
@@ -216,8 +244,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/showed_up"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_appointment_note" />
+            app:layout_constraintStart_toEndOf="@id/etxt_price"
+            app:layout_constraintTop_toBottomOf="@id/txt_service_type" />
 
 
     </android.support.constraint.ConstraintLayout>
