--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#393F3D</item>
+        <item name="colorPrimaryDark">#2D3331</item>
+        <item name="colorAccent">#e65100</item>
         <item name="android:statusBarColor"> @android:color/transparent </item>
     </style>
 
@@ -19,3 +19,13 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
+
+
+
+<!--<item name="colorPrimary">#394053</item>
+<item name="colorPrimaryDark">#262A38</item>
+<item name="colorAccent">#EA6112</item>-->
+
+<!--<item name="colorPrimary">@color/colorPrimary</item>
+<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+<item name="colorAccent">@color/colorAccent</item>-->
