Service, Sales, Goal Adapter, Sales list views added as well they do nothing but they are there.

--- a/app/src/main/res/layout/goal_adapter.xml
+++ b/app/src/main/res/layout/goal_adapter.xml
@@ -13,7 +13,8 @@
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="10sp"
         android:text="Goal"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:visibility="visible" />
 </LinearLayout>
