--- a/app/src/main/res/layout/fragment_goal_list.xml
+++ b/app/src/main/res/layout/fragment_goal_list.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.evans.ui.CustomersListFragment">
 
-<android.support.constraint.ConstraintLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floating_add_btn"
+            android:id="@+id/floating_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -20,12 +20,12 @@
             app:srcCompat="@drawable/ic_add_black_24dp"
             android:backgroundTint="@color/colorAccent"/>
 
-    <ListView
-        android:id="@+id/service_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/goal_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </ListView>
+        </ListView>
 
     </android.support.constraint.ConstraintLayout>
 
