--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -174,9 +174,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dollar_sign"
+            android:layout_marginTop="30dp"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="@id/txt_price"
+            app:layout_constraintTop_toBottomOf="@id/spinner_service_type"
             app:layout_constraintStart_toEndOf="@id/txt_price"
             android:layout_marginLeft="8dp"/>
 
