--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -20,7 +20,7 @@
 
         <Button
             android:id="@+id/btn_appointment_cancel"
-            android:text="@string/cancel"
+            android:text="@string/button_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
