--- a/app/src/main/res/layout/fragment_customer_edit.xml
+++ b/app/src/main/res/layout/fragment_customer_edit.xml
@@ -48,19 +48,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
 
-        <TextView
-            android:id="@+id/txt_other_notes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="44dp"
-            android:text="@string/customer_other_info"
-            android:labelFor="@id/etxt_other_notes"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_email" />
-
         <EditText
             android:id="@+id/etxt_name"
             android:layout_width="wrap_content"
@@ -105,22 +92,6 @@
             app:layout_constraintStart_toEndOf="@+id/txt_email"
             app:layout_constraintTop_toBottomOf="@+id/etxt_phone" />
 
-        <EditText
-            android:id="@+id/etxt_other_notes"
-            android:layout_width="313dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:ems="10"
-            android:inputType="textMultiLine"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_other_notes" />
-
         <Button
             android:id="@+id/btn_set_appt"
             android:layout_width="wrap_content"
@@ -131,7 +102,7 @@
             android:text="@string/set_appt"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_other_notes"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_phone"
             app:layout_constraintVertical_bias="0.215" />
 
         <Button
@@ -149,7 +120,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_set_appt"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_other_notes"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_phone"
             app:layout_constraintVertical_bias="0.216" />
     </android.support.constraint.ConstraintLayout>
 
