started appointment view, when hit save on edit screen get 'Selected Service was null' error

--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -114,7 +114,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
             android:ems="10"
-            android:hint="@string/date"
+            android:hint="@string/appointment_date"
             android:focusable="false"
             android:clickable="true"
             android:inputType="datetime"
@@ -127,7 +127,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="@string/time"
+            android:hint="@string/appointment_time"
             android:clickable="true"
             android:focusable="false"
             app:layout_constraintTop_toBottomOf="@id/etxt_customer_phone"
