--- a/app/src/main/res/layout/fragment_customer_edit.xml
+++ b/app/src/main/res/layout/fragment_customer_edit.xml
@@ -9,18 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+        <include
+            layout="@layout/edit_bar"
+            android:id="@+id/edit_bar_in_customer_edit"
+            />
+
         <TextView
             android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
             android:text="@string/customer_name"
             android:labelFor="@id/etxt_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/edit_bar_in_customer_edit" />
+
+        <EditText
+            android:id="@+id/etxt_name"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintStart_toEndOf="@+id/txt_name"
+            app:layout_constraintTop_toBottomOf="@id/edit_bar_in_customer_edit" />
 
         <TextView
             android:id="@+id/txt_phone"
@@ -35,6 +51,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_name" />
 
+        <EditText
+            android:id="@+id/etxt_phone"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:inputType="phone"
+            app:layout_constraintStart_toEndOf="@+id/txt_phone"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_name" />
+
         <TextView
             android:id="@+id/txt_email"
             android:layout_width="wrap_content"
@@ -48,80 +75,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
 
-        <EditText
-            android:id="@+id/etxt_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="44dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_name"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/etxt_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:inputType="phone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_phone"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_name" />
 
         <EditText
             android:id="@+id/etxt_email"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="textEmailAddress"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.515"
             app:layout_constraintLeft_toLeftOf="@id/txt_email"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_email"
             app:layout_constraintTop_toBottomOf="@+id/etxt_phone" />
 
         <Button
             android:id="@+id/btn_set_appt"
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="@string/set_appt"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_phone"
-            app:layout_constraintVertical_bias="0.215" />
-
-        <Button
-            android:id="@+id/btn_save_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/button_save"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.723"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_set_appt"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_phone"
-            app:layout_constraintVertical_bias="0.216" />
+            android:layout_marginEnd="16dp"
+            android:background="@color/colorAccent"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/etxt_email"
+            />
+
+
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
