--- a/app/src/main/res/layout/fragment_appointment_edit.xml
+++ b/app/src/main/res/layout/fragment_appointment_edit.xml
@@ -150,7 +150,7 @@
 
 
         <Spinner
-            android:id="@+id/spinner_service_type"
+            android:id="@+id/spinner_sales_type"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -168,7 +168,7 @@
             android:text="@string/service_price"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/spinner_service_type" />
+            app:layout_constraintTop_toBottomOf="@id/spinner_sales_type" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -177,7 +177,7 @@
             android:layout_marginTop="30dp"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/spinner_service_type"
+            app:layout_constraintTop_toBottomOf="@id/spinner_sales_type"
             app:layout_constraintStart_toEndOf="@id/txt_price"
             android:layout_marginLeft="8dp"/>
 
@@ -191,7 +191,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             app:layout_constraintStart_toEndOf="@+id/txt_price"
-            app:layout_constraintTop_toBottomOf="@id/spinner_service_type" />
+            app:layout_constraintTop_toBottomOf="@id/spinner_sales_type" />
 
 
         <CheckBox
