--- a/app/src/main/res/layout/fragment_customer_edit.xml
+++ b/app/src/main/res/layout/fragment_customer_edit.xml
@@ -35,6 +35,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edit_bar_in_customer_edit" />
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="phone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etxt_name" />
@@ -84,6 +86,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etxt_phone" />
