--- a/app/src/main/res/layout/fragment_goal_edit.xml
+++ b/app/src/main/res/layout/fragment_goal_edit.xml
@@ -24,7 +24,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/goal_name"
-            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_goal"/>
@@ -32,13 +31,13 @@
 
         <EditText
             android:id="@+id/etxt_goal_name"
-            android:layout_width="wrap_content"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="14dp"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="textPersonName"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_goal_name"
             app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_goal"/>
 
@@ -50,25 +49,24 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/goal_start_date"
-            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_goal_name" />
 
         <EditText
             android:id="@+id/etxt_start_date"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="datetime"
             android:focusable="false"
             android:clickable="true"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_start_date"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_goal_name" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_name" />
 
         <TextView
             android:id="@+id/txt_end_date"
@@ -78,7 +76,6 @@
             android:layout_marginTop="32dp"
             android:layout_marginStart="16dp"
             android:text="@string/goal_end_date"
-            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/txt_start_date"
             app:layout_constraintStart_toStartOf="parent" />
@@ -86,17 +83,16 @@
 
         <EditText
             android:id="@+id/etxt_end_date"
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:focusable="false"
             android:clickable="true"
             android:inputType="datetime"
-            app:layout_constraintHorizontal_bias="0.822"
             app:layout_constraintStart_toEndOf="@+id/txt_end_date"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_start_date" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_start_date" />
 
 
         <TextView
@@ -107,7 +103,6 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/goal_repeat_times"
-            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/txt_end_date"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -115,15 +110,14 @@
 
         <EditText
             android:id="@+id/etxt_repeat_time"
-            android:layout_width="wrap_content"
+            android:layout_width="225dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintLeft_toRightOf="@id/txt_repeat_time"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_end_date" />
-
+            app:layout_constraintTop_toBottomOf="@+id/txt_end_date" />
 
 
         <TextView
@@ -135,18 +129,19 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/goal_details"
-            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/txt_repeat_time"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/etxt_goal_details"
-            android:layout_width="352dp"
+            android:layout_width="320dp"
             android:layout_height="73dp"
             android:ems="10"
             android:layout_marginLeft="16dp"
-            android:inputType="textMultiLine"
+            android:imeOptions="actionDone"
+            android:inputType="textImeMultiLine"
+            android:maxLines="4"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/txt_goal_details"/>
