--- a/app/src/main/res/layout/fragment_sales_edit.xml
+++ b/app/src/main/res/layout/fragment_sales_edit.xml
@@ -30,67 +30,81 @@
 
         <Spinner
             android:id="@+id/spinner_sales_type"
-            android:layout_width="213dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/txt_service_type"
-            app:layout_constraintTop_toBottomOf="@+id/edit_bar_in_sales" />
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_service_type" />
 
         <TextView
             android:id="@+id/txt_sale_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/salesDate"
             android:textStyle="bold"
+            android:labelFor="@id/etxt_sale_date"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_service_type" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
 
 
         <EditText
             android:id="@+id/etxt_sale_date"
             android:layout_width="211dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="52dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="16dp"
             android:clickable="true"
             android:ems="10"
             android:focusable="false"
             android:inputType="datetime"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date" />
+
 
         <TextView
             android:id="@+id/txt_sales_price"
             android:layout_width="72dp"
             android:layout_height="23dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginTop="32dp"
+            android:labelFor="@id/etxt_sale_price"
             android:text="@string/salesPrice"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner_sales_type" />
+
+
+        <TextView
+            android:id="@+id/txt_service_dollar_sign"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dollar_sign"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="80dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/etxt_sale_date"
+            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date"
+            />
+
 
 
         <EditText
             android:id="@+id/etxt_sale_price"
-            android:layout_width="209dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="52dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginTop="0dp"
             android:ems="10"
             android:inputType="numberDecimal"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etxt_sale_date"
-            app:layout_constraintVertical_bias="0.027" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_sale_date"
+            />
 
 
     </android.support.constraint.ConstraintLayout>
