--- a/app/src/main/res/layout/fragment_service_edit.xml
+++ b/app/src/main/res/layout/fragment_service_edit.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="textPersonName"
             android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +57,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:ems="10"
-            android:inputType="textMultiLine"
+            android:maxLines="1"
+            android:imeOptions="actionDone"
+            android:inputType="textImeMultiLine"
             android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_service_description" />
