--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#393F3D</item>
-        <item name="colorPrimaryDark">#2D3331</item>
-        <item name="colorAccent">#e65100</item>
+        <item name="colorPrimary">#0c419d</item>
+        <item name="colorPrimaryDark">#032476</item>
+        <item name="colorAccent">#bb1004</item>
         <item name="android:statusBarColor"> @android:color/transparent </item>
     </style>
 
