Adapter expense and sales updated

--- a/app/src/main/res/layout/sales_adapter.xml
+++ b/app/src/main/res/layout/sales_adapter.xml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+
+<TextView
+        android:id="@+id/array_adapter_sales_service"
+        android:layout_width="fill_parent"
+        android:layout_height="32dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_gravity="center"
+        android:layout_marginStart="16dp"
+        android:text="@string/default_string"
+        android:textColor="#000"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/salesAdapter"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/array_adapter_sales_price"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_gravity="center"
-        android:lineSpacingExtra="18sp"
-        android:text="Sales"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-</LinearLayout>
+        android:layout_marginStart="16dp"
+        android:text="@string/default_string"
+        android:textColor="#000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/array_adapter_sales_service" />
+
+    <TextView
+        android:id="@+id/array_adapter_sales_date"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:gravity="right"
+        android:layout_marginEnd="16dp"
+        android:text="@string/default_string"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#000"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/array_adapter_sales_service" />
+
+</android.support.constraint.ConstraintLayout>
