--- a/app/src/main/res/layout/expense_adapter.xml
+++ b/app/src/main/res/layout/expense_adapter.xml
@@ -7,12 +7,42 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/array_expense_adapter"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Expense"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        <TextView
+            android:id="@+id/array_adapter_expense_title"
+            android:layout_width="fill_parent"
+            android:layout_height="32dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:text="@string/default_string"
+            android:textColor="#000"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/array_adapter_expense_price"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:text="@string/default_string"
+            android:textColor="#000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/array_adapter_expense_title" />
+
+        <TextView
+            android:id="@+id/array_adapter_expense_date"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:gravity="right"
+            android:layout_marginEnd="16dp"
+            android:text="@string/default_string"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#000"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/array_adapter_expense_title" />
 </android.support.constraint.ConstraintLayout>
