--- a/app/src/main/res/layout/fragment_expense_edit.xml
+++ b/app/src/main/res/layout/fragment_expense_edit.xml
@@ -20,10 +20,12 @@
             android:id="@+id/txt_expense_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
-            android:text="@string/expense_name"
+            android:layout_marginTop="26dp"
             android:labelFor="@id/etxt_expense_name"
+            android:text="@string/expense_name"
+            app:layout_constraintEnd_toStartOf="@+id/etxt_expense_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/expense_edit_bar" />
@@ -44,11 +46,13 @@
             android:id="@+id/txt_expense_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/expense_price"
             android:labelFor="@id/etxt_expense_price"
+            android:text="@string/expense_price"
+            app:layout_constraintEnd_toStartOf="@+id/etxt_expense_price"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_expense_name" />
@@ -69,11 +73,13 @@
             android:id="@+id/txt_expense_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
-            android:text="@string/expense_date"
             android:labelFor="@id/etxt_expense_date"
+            android:text="@string/expense_date"
+            app:layout_constraintEnd_toStartOf="@+id/etxt_expense_date"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_expense_price" />
