--- a/app/src/main/res/layout/fragment_goal_view.xml
+++ b/app/src/main/res/layout/fragment_goal_view.xml
@@ -12,11 +12,11 @@
 
         <TextView
             android:id="@+id/txt_goal_view_name"
-            android:layout_width="120dp"
+            android:layout_width="324dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="28dp"
-            android:text="@string/goal_name"
+            android:text="@string/goal_title"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -27,39 +27,39 @@
 
         <TextView
             android:id="@+id/txt_goal_view_startD"
-            android:layout_width="120dp"
-            android:layout_height="32dp"
+            android:layout_width="138dp"
+            android:layout_height="31dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/goal_start_date"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.12"
+            app:layout_constraintBottom_toTopOf="@+id/goal_done_box"
+            app:layout_constraintEnd_toStartOf="@+id/txt_goal_view_endD"
+            app:layout_constraintHorizontal_bias="0.406"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_view_endD"
-            app:layout_constraintVertical_bias="0.051" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail"
+            app:layout_constraintVertical_bias="0.338" />
 
         <TextView
             android:id="@+id/txt_goal_view_endD"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="131dp"
+            android:layout_height="33dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="36dp"
+            android:layout_marginTop="8dp"
             android:text="@string/goal_end_date"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/goal_done_box"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.12"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail" />
+            app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail"
+            app:layout_constraintVertical_bias="0.35" />
 
         <TextView
             android:id="@+id/txt_goal_detail"
             android:layout_width="321dp"
-            android:layout_height="103dp"
+            android:layout_height="66dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="8dp"
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_goal_view_name" />
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/goal_done_box"
             android:layout_width="120dp"
             android:layout_height="33dp"
             android:layout_marginBottom="8dp"
@@ -85,10 +85,10 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.436"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_goal_detail"
-            app:layout_constraintVertical_bias="0.26" />
+            app:layout_constraintVertical_bias="0.15" />
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
